Removed scrollbars, fixed endgame crash.

--- a/sources/links/main.css
+++ b/sources/links/main.css
@@ -1,4 +1,4 @@
-body { background:black; font-family: 'pt_mono',monospace; min-width:750px;}
+body { background:black; font-family: 'pt_mono',monospace; min-width:750px; overflow-y: hidden;}
 
 #wrapper { display: block;max-width: 900px; height: calc(25vw * 1.25 + 90px);max-height:400px;margin:50px auto;position: relative;width: calc(100% - 60px)}
 
